@@ -215,10 +215,28 @@ paragraphstart     = ({inputcharacter})
 
 <PRE, NORMAL, NONPARAGRAPH, P>{whitespace} {
     // no need to log this
-    return yytext();
+    String raw = yytext();
+    try {
+        CharacterTag characterTag = new CharacterTag();
+        String value = characterTag.parse(this.parserInput, this.parserDocument, this.mode, raw);
+        return value;
+    } catch (Exception e) {
+        logger.info("Unable to parse " + raw, e);
+        // FIXME - what to return here?
+        return "";
+    }
 }
 
 <PRE, NORMAL, NONPARAGRAPH, P>. {
     // no need to log this
-    return yytext();
+    String raw = yytext();
+    try {
+        CharacterTag characterTag = new CharacterTag();
+        String value = characterTag.parse(this.parserInput, this.parserDocument, this.mode, raw);
+        return value;
+    } catch (Exception e) {
+        logger.info("Unable to parse " + raw, e);
+        // FIXME - what to return here?
+        return "";
+    }
 }
